inputs casi listos, main media queries 500 inline-flex

--- a/index.html
+++ b/index.html
@@ -36,9 +36,38 @@
                  </div>
              
          </section>
+
+         <section class = "main_section_container--inputs">
+             <label for="text1" class = "label_correo_electronico">
+                 <input type="text" placeholder="Correo electrónico o número de teléfono">
+             </label>
+             <label for="text2" class = "label_contraseña">
+                <input type="text" placeholder = "Contraseña">
+             </label>
+             <label class = "label_iniciar_sesion">
+                 <input type="button" value = "Iniciar sesión">
+             </label>
+             <p class = "p_olvidaste-contraseña"><a href="">¿Olvidaste tu contraseña?</a></p>
+             
+             <label class = "label_crear-cuenta">
+                 <hr> 
+                 <input type = "button" value = "Crear cuenta nueva">
+             </label>
+         </section>
     </main>
     <footer>
-
+         <section>
+             <a href=""></a>
+             <a href=""></a>
+             <a href=""></a> 
+             <a href=""></a>
+             <a href=""></a>
+             <a href=""></a>
+             <a href=""></a>
+             <a href=""></a>
+             <a href=""></a>
+             <a href=""></a>
+         </section>
     </footer>
 </body>
 </html>
