--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta neme = "robots">
-    <link rel="stylesheet" href="./mobile.css">
-    <link rel="stylesheet" media = "(min-width: 500px)" href="./+500.css">
-    <link rel="stylesheet" href="./tablet_pc.css" media="(min-width:800px)">
+    <link rel="stylesheet" href="./css/mobile.css">
+    <link rel="stylesheet" media = "(min-width: 500px)" href="./css/+500.css">
+    <link rel="stylesheet" href="./css/tablet_pc.css" media="(min-width:800px)">
     <link rel="icon" href="./assets/facebook.svg">
     <title>Facebook</title>
 </head>
